--- a/AlipayWebPay/src/main/resources/application.properties
+++ b/AlipayWebPay/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8002
+
+alipay.recharge_notify = server.natappfree.cc:46365/express/alipay/notify
+
+#thymelea模板配置
+spring.thymeleaf.prefix=classpath:/static/template/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+#热部署文件，页面不产生缓存，及时更新
+spring.thymeleaf.cache=false
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
